--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <p>교사 AIvengers 그룹에서 발굴한 최신 AI 도구들과 인사이트를 한 곳에서 확인하세요</p>
             <div class="stats-bar">
                 <div class="stat-item">
-                    <div class="stat-number" id="total-tools">20+</div>
+                    <div class="stat-number" id="total-tools">32+</div>
                     <div class="stat-label">AI Tools</div>
                 </div>
                 <div class="stat-item">
@@ -653,6 +653,184 @@
                 </div>
                 <p>Claude Code 공식 강좌</p>
             </div>
+
+            <!-- New Tools from August 2025 Updates -->
+            <div class="tool-card" data-category="development" data-keywords="notion ai enhanced 자동화 페이지편집 데이터베이스">
+                <div class="tool-header">
+                    <div class="tool-name">Notion AI <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">개발 도구</div>
+                </div>
+                <a href="https://www.notion.so" target="_blank" class="tool-url">https://www.notion.so</a>
+                <div class="tool-price paid">구독 필요</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">다중 페이지 편집</span>
+                    <span class="feature-tag">데이터베이스 자동화</span>
+                    <span class="feature-tag">파워 유저 기능</span>
+                </div>
+                <p>여러 페이지 한 번에 편집하고 데이터베이스도 자동화 가능한 업그레이드된 Notion AI</p>
+            </div>
+
+            <div class="tool-card" data-category="development" data-keywords="open lovable 오픈소스 웹사이트복제 react">
+                <div class="tool-header">
+                    <div class="tool-name">Open Lovable <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">개발 도구</div>
+                </div>
+                <a href="https://github.com/mendableai/open-lovable" target="_blank" class="tool-url">https://github.com/mendableai/open-lovable</a>
+                <div class="tool-price">오픈소스</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">웹사이트 복제</span>
+                    <span class="feature-tag">React 변환</span>
+                    <span class="feature-tag">MIT 라이선스</span>
+                </div>
+                <p>AI와 대화하며 몇 초 만에 원하는 웹사이트를 최신 React 앱으로 복제하는 오픈소스 툴</p>
+            </div>
+
+            <div class="tool-card" data-category="development" data-keywords="cursor terminal cli 에디터 ai">
+                <div class="tool-header">
+                    <div class="tool-name">Cursor Terminal <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">개발 도구</div>
+                </div>
+                <a href="https://cursor.com" target="_blank" class="tool-url">https://cursor.com</a>
+                <div class="tool-price">Cursor 구독 필요</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">터미널 AI</span>
+                    <span class="feature-tag">모든 AI 모델</span>
+                    <span class="feature-tag">CLI 통합</span>
+                </div>
+                <p>터미널에서 사용 가능한 Cursor, 모든 AI 모델 접근 가능</p>
+                <p><strong>설치:</strong> <code>curl https://cursor.com/install-fsS | bash</code></p>
+            </div>
+
+            <div class="tool-card" data-category="specialized" data-keywords="teaboard chat 로컬 문서 api 보안">
+                <div class="tool-header">
+                    <div class="tool-name">Teaboard Chat <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">전문 도구</div>
+                </div>
+                <a href="https://teaboard-chat.vercel.app" target="_blank" class="tool-url">https://teaboard-chat.vercel.app</a>
+                <div class="tool-price">API 요금</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">로컬 문서</span>
+                    <span class="feature-tag">보안 중시</span>
+                    <span class="feature-tag">임시 저장</span>
+                </div>
+                <p>문서를 로컬에 올리고 채팅 후 자동 삭제. OpenAI, Gemini API 지원</p>
+            </div>
+
+            <div class="tool-card" data-category="specialized" data-keywords="wisprflow 음성 dictation 무료">
+                <div class="tool-header">
+                    <div class="tool-name">WisprFlow <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">전문 도구</div>
+                </div>
+                <a href="https://wisprflow.ai" target="_blank" class="tool-url">https://wisprflow.ai</a>
+                <div class="tool-price">1달 무료</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">음성 받아쓰기</span>
+                    <span class="feature-tag">실시간 변환</span>
+                    <span class="feature-tag">무료 체험</span>
+                </div>
+                <p>음성으로 dictation하는 도구. 1달 무료 사용 가능</p>
+            </div>
+
+            <div class="tool-card" data-category="development" data-keywords="google opal 노코드 앱제작 구글">
+                <div class="tool-header">
+                    <div class="tool-name">Google OPAL <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">개발 도구</div>
+                </div>
+                <a href="https://opal.google.com" target="_blank" class="tool-url">Google OPAL</a>
+                <div class="tool-price">무료</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">노코드</span>
+                    <span class="feature-tag">10분 제작</span>
+                    <span class="feature-tag">AI 미니앱</span>
+                </div>
+                <p>구글이 무료로 공개한 AI 미니앱 제작 도구. 코딩 없이 10분 만에 앱 제작</p>
+            </div>
+
+            <div class="tool-card" data-category="browser" data-keywords="v0 mobile ios android 모바일">
+                <div class="tool-header">
+                    <div class="tool-name">V0 Mobile <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">브라우저 도구</div>
+                </div>
+                <a href="https://v0.app/ios" target="_blank" class="tool-url">https://v0.app/ios</a>
+                <div class="tool-price">대기자 명단</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">모바일 버전</span>
+                    <span class="feature-tag">iOS 지원</span>
+                    <span class="feature-tag">Waitlist</span>
+                </div>
+                <p>V0의 모바일 버전. 현재 대기자 명단 신청 중</p>
+            </div>
+
+            <div class="tool-card" data-category="specialized" data-keywords="deepl api 번역 무료">
+                <div class="tool-header">
+                    <div class="tool-name">DeepL API <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">전문 도구</div>
+                </div>
+                <a href="https://www.deepl.com/ko/pro-api" target="_blank" class="tool-url">https://www.deepl.com/ko/pro-api</a>
+                <div class="tool-price">무료 티어</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">번역 API</span>
+                    <span class="feature-tag">고품질</span>
+                    <span class="feature-tag">무료 제공</span>
+                </div>
+                <p>고품질 번역 API. 무료 회원가입으로 API 사용 가능</p>
+            </div>
+
+            <div class="tool-card" data-category="specialized" data-keywords="markitdown 문서변환 마크다운">
+                <div class="tool-header">
+                    <div class="tool-name">MarkitDown <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">전문 도구</div>
+                </div>
+                <a href="https://github.com/microsoft/markitdown" target="_blank" class="tool-url">Microsoft MarkitDown</a>
+                <div class="tool-price">오픈소스</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">문서 변환</span>
+                    <span class="feature-tag">마크다운</span>
+                    <span class="feature-tag">Microsoft</span>
+                </div>
+                <p>HWP, PDF 등을 마크다운으로 변환하는 Microsoft 도구</p>
+            </div>
+
+            <div class="tool-card" data-category="specialized" data-keywords="glocaledu 교육 다국어 캘린더">
+                <div class="tool-header">
+                    <div class="tool-name">Glocal Education <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">전문 도구</div>
+                </div>
+                <a href="https://glocaledu.link" target="_blank" class="tool-url">https://glocaledu.link</a>
+                <div class="tool-price">테스트 버전</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">교육 시스템</span>
+                    <span class="feature-tag">다국어 지원</span>
+                    <span class="feature-tag">캘린더 통합</span>
+                </div>
+                <p>다국어 교육 캘린더를 포함한 통신문 시스템</p>
+            </div>
+
+            <div class="tool-card" data-category="specialized" data-keywords="miraclass 교육 상담 자동화">
+                <div class="tool-header">
+                    <div class="tool-name">MiraClass <span class="update-badge">NEW</span></div>
+                    <div class="tool-category">전문 도구</div>
+                </div>
+                <a href="https://miraclass.link" target="_blank" class="tool-url">https://miraclass.link</a>
+                <div class="tool-price">개발 중</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">교육 플랫폼</span>
+                    <span class="feature-tag">상담 자동화</span>
+                    <span class="feature-tag">베타 버전</span>
+                </div>
+                <p>교육/상담 자동화 프로그램. 현재 개발 중 (60% 완성)</p>
+            </div>
         </div>
 
         <div class="no-results" id="no-results" style="display: none;">
@@ -690,7 +868,7 @@
         </div>
 
         <div class="footer">
-            <p>📅 Last Updated: 2025-08-06 | 📱 From: 교사 AIvengers KakaoTalk Group</p>
+            <p>📅 Last Updated: 2025-08-29 | 📱 From: 교사 AIvengers KakaoTalk Group</p>
             <p>이 정보는 실제 교육자들의 경험을 바탕으로 수집되었습니다.</p>
         </div>
     </div>
