--- a/index.html
+++ b/index.html
@@ -654,6 +654,23 @@
                 <p>Claude Code 공식 강좌</p>
             </div>
 
+            <div class="tool-card" data-category="specialized" data-keywords="excalidraw 다이어그램 그림 화이트보드 무료 오픈소스">
+                <div class="tool-header">
+                    <div class="tool-name">Excalidraw</div>
+                    <div class="tool-category">전문 도구</div>
+                </div>
+                <a href="https://excalidraw.com" target="_blank" class="tool-url">https://excalidraw.com</a>
+                <div class="tool-price">무료</div>
+                <div class="tool-features">
+                    <h4>주요 특징:</h4>
+                    <span class="feature-tag">화이트보드</span>
+                    <span class="feature-tag">다이어그램</span>
+                    <span class="feature-tag">협업 가능</span>
+                    <span class="feature-tag">오픈소스</span>
+                </div>
+                <p>손으로 그린 듯한 다이어그램과 화이트보드를 만들 수 있는 무료 오픈소스 도구</p>
+            </div>
+
             <!-- New Tools from August 2025 Updates -->
             <div class="tool-card" data-category="development" data-keywords="notion ai enhanced 자동화 페이지편집 데이터베이스">
                 <div class="tool-header">
